wip : page actu + css global + taille font

--- a/content.html
+++ b/content.html
@@ -53,3 +53,8 @@ Vous pouvez aussi faire appel à notre équipe pour des travaux d'aérogommage, 
 L'Îlot gourmand, c'est un peu plus qu'un restaurant.
  
 C'est aussi une cuisine centrale au service des collectivités, et une activité de traiteur pour vos fêtes et réceptions.
+
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+
+Fusce consectetur dui quis laoreet viverra. Ut auctor at sem in rutrum. Vivamus dolor arcu, hendrerit non pulvinar vel, interdum nec nisl. Praesent tempor sapien non mollis congue. Pellentesque tellus libero, egestas eu convallis id, malesuada vitae ligula.
