wip mise en page home

--- a/content.html
+++ b/content.html
@@ -58,3 +58,8 @@ C'est aussi une cuisine centrale au service des collectivités, et une activité
 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 
 Fusce consectetur dui quis laoreet viverra. Ut auctor at sem in rutrum. Vivamus dolor arcu, hendrerit non pulvinar vel, interdum nec nisl. Praesent tempor sapien non mollis congue. Pellentesque tellus libero, egestas eu convallis id, malesuada vitae ligula.
+
+
+NOTRE VALEUR AJOUTéE : LA SOLIDARITé
+
+En faisant appel à nos services, vous vous assurez un service de qualité, au meilleur prix… et vous donnez un coup de pouce à nos salariés en contrats d’insertion.
